--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
